lwjgl3ify 3.0, add runClient25 and runServer25 (#62)